// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FiltersContent /> should render the "Exists" filter 1`] = `
Array [
  .emotion-8 {
  padding: 4px;
  border-bottom: 1px solid #191919;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-0 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-0[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-0,
.emotion-0:hover,
.emotion-0:visited {
  background-color: #73b61c;
}

.emotion-0:hover {
  background-color: #96c955;
}

.emotion-0[aria-disabled=true] {
  background-color: #808080;
}

.emotion-1 {
  width: 8px;
}

.emotion-2 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-2:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-2[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-2,
.emotion-2:hover,
.emotion-2:visited {
  background-color: #808080;
}

.emotion-2:hover {
  background-color: #b3b3b3;
}

.emotion-2[aria-disabled=true] {
  background-color: #808080;
}

.emotion-4 {
  height: 4px;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-5 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: none;
  padding: 12px;
  border-top-left-radius: 2px;
  border-bottom-left-radius: 2px;
  color: #e0e0e0;
  background-color: #191919;
}

.emotion-5:focus {
  color: #191919;
  background-color: #ffffff;
}

.emotion-6 {
  width: 42px;
  border-top-right-radius: 2px;
  border-bottom-right-radius: 2px;
  color: #000000;
  background-color: #808080;
  margin: 0;
  padding: 0;
  border: 0;
  cursor: not-allowed;
}

<div
    className="emotion-8"
  >
    <div
      className="emotion-3"
    >
      <button
        className="emotion-0"
        onClick={[Function]}
        type="button"
      >
        + Add Metadata Filters
      </button>
      <div
        className="emotion-1"
      />
      <button
        className="emotion-2"
        onClick={[Function]}
        type="button"
      >
        Clear All Filters
      </button>
    </div>
    <div
      className="emotion-4"
    />
    <form
      action=""
      method="post"
      onSubmit={[Function]}
    >
      <div
        className="emotion-7"
      >
        <input
          className="emotion-5"
          onChange={[Function]}
          placeholder="Create text filter (search name or field value)"
          type="text"
          value=""
        />
        <button
          aria-disabled={true}
          aria-label="Search"
          className="emotion-6"
          onClick={[Function]}
          type="submit"
        >
          +
        </button>
      </div>
    </form>
  </div>,
  .emotion-11 {
  overflow: auto;
}

.emotion-10 {
  background-color: #252525;
  border-radius: 2px;
}

.emotion-3 {
  border-bottom: 1px solid #4a4a4a;
  padding-top: 12px;
  padding-bottom: 12px;
  padding-left: 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-3 h4 {
  font-weight: 400;
}

.emotion-1 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 0;
}

.emotion-1:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-1[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-0 {
  -webkit-transform: rotate(-180deg);
  -ms-transform: rotate(-180deg);
  transform: rotate(-180deg);
}

.emotion-0:hover {
  color: #ffffff;
}

.emotion-2 {
  font-size: 17px;
  line-height: 20px;
  padding-left: 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-9 {
  width: 100%;
  background-color: #191919;
}

.emotion-8 {
  padding: 16px;
  padding-left: 12px;
  padding-right: 12px;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 1px solid #808080;
  border-radius: 2px;
}

.emotion-4 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border-radius: 0;
  padding: 12px;
  background-color: #808080;
  color: #ffffff;
}

.emotion-4:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-4[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-4:hover {
  color: #ffffff;
}

.emotion-5 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border-radius: 0;
  padding: 12px;
  background-color: transparent;
  color: #808080;
}

.emotion-5:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-5[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-5:hover {
  color: #ffffff;
}

.emotion-7 {
  color: #808080;
  text-align: center;
  padding: 8px;
}

<div
    className="emotion-11"
  >
    <div
      className="emotion-10"
    >
      <div
        className="emotion-3"
      >
        <button
          aria-label="Collapse Section"
          className="emotion-1"
          onClick={[Function]}
          type="button"
        >
          <svg
            className="emotion-0"
            color="#808080"
            data-file-name="chevron.svg"
            width={20}
          />
        </button>
        <h4
          className="emotion-2"
        >
          location.point
        </h4>
      </div>
      <div
        className="emotion-9"
      >
        <div
          className="emotion-8"
        >
          <div
            className="emotion-6"
          >
            <button
              className="emotion-4"
              onClick={[Function]}
              type="button"
            >
              Exists
            </button>
            <button
              className="emotion-5"
              onClick={[Function]}
              type="button"
            >
              Missing
            </button>
          </div>
          <div
            className="emotion-7"
          >
            <span>
              Show assets with the field "
              location.point
              "
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`<FiltersContent /> should render the "Facet" filter 1`] = `
Array [
  .emotion-8 {
  padding: 4px;
  border-bottom: 1px solid #191919;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-0 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-0[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-0,
.emotion-0:hover,
.emotion-0:visited {
  background-color: #73b61c;
}

.emotion-0:hover {
  background-color: #96c955;
}

.emotion-0[aria-disabled=true] {
  background-color: #808080;
}

.emotion-1 {
  width: 8px;
}

.emotion-2 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-2:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-2[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-2,
.emotion-2:hover,
.emotion-2:visited {
  background-color: #808080;
}

.emotion-2:hover {
  background-color: #b3b3b3;
}

.emotion-2[aria-disabled=true] {
  background-color: #808080;
}

.emotion-4 {
  height: 4px;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-5 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: none;
  padding: 12px;
  border-top-left-radius: 2px;
  border-bottom-left-radius: 2px;
  color: #e0e0e0;
  background-color: #191919;
}

.emotion-5:focus {
  color: #191919;
  background-color: #ffffff;
}

.emotion-6 {
  width: 42px;
  border-top-right-radius: 2px;
  border-bottom-right-radius: 2px;
  color: #000000;
  background-color: #808080;
  margin: 0;
  padding: 0;
  border: 0;
  cursor: not-allowed;
}

<div
    className="emotion-8"
  >
    <div
      className="emotion-3"
    >
      <button
        className="emotion-0"
        onClick={[Function]}
        type="button"
      >
        + Add Metadata Filters
      </button>
      <div
        className="emotion-1"
      />
      <button
        className="emotion-2"
        onClick={[Function]}
        type="button"
      >
        Clear All Filters
      </button>
    </div>
    <div
      className="emotion-4"
    />
    <form
      action=""
      method="post"
      onSubmit={[Function]}
    >
      <div
        className="emotion-7"
      >
        <input
          className="emotion-5"
          onChange={[Function]}
          placeholder="Create text filter (search name or field value)"
          type="text"
          value=""
        />
        <button
          aria-disabled={true}
          aria-label="Search"
          className="emotion-6"
          onClick={[Function]}
          type="submit"
        >
          +
        </button>
      </div>
    </form>
  </div>,
  .emotion-8 {
  overflow: auto;
}

.emotion-7 {
  background-color: #252525;
  border-radius: 2px;
}

.emotion-3 {
  border-bottom: 1px solid #4a4a4a;
  padding-top: 12px;
  padding-bottom: 12px;
  padding-left: 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-3 h4 {
  font-weight: 400;
}

.emotion-1 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 0;
}

.emotion-1:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-1[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-0 {
  -webkit-transform: rotate(-180deg);
  -ms-transform: rotate(-180deg);
  transform: rotate(-180deg);
}

.emotion-0:hover {
  color: #ffffff;
}

.emotion-2 {
  font-size: 17px;
  line-height: 20px;
  padding-left: 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-6 {
  width: 100%;
  background-color: #191919;
}

.emotion-5 {
  padding: 16px;
  padding-left: 12px;
  padding-right: 12px;
}

.emotion-5 div {
  background-color: transparent;
  box-shadow: none;
}

.emotion-4 {
  margin: 0;
}

<div
    className="emotion-8"
  >
    <div
      className="emotion-7"
    >
      <div
        className="emotion-3"
      >
        <button
          aria-label="Collapse Section"
          className="emotion-1"
          onClick={[Function]}
          type="button"
        >
          <svg
            className="emotion-0"
            color="#808080"
            data-file-name="chevron.svg"
            width={20}
          />
        </button>
        <h4
          className="emotion-2"
        >
          location.city
        </h4>
      </div>
      <div
        className="emotion-6"
      >
        <div
          className="emotion-5"
        >
          <ul
            className="emotion-4"
          >
            <li>
              Tyngsboro
              : 
              3
            </li>
            <li>
              Brooklyn
              : 
              2
            </li>
            <li>
              Cát Bà
              : 
              1
            </li>
            <li>
              La Habana Vieja
              : 
              1
            </li>
            <li>
              North Glendale
              : 
              1
            </li>
            <li>
              Saalfelden am Steinernen Meer
              : 
              1
            </li>
            <li>
              Zermatt
              : 
              1
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`<FiltersContent /> should render the "Range" filter 1`] = `
Array [
  .emotion-8 {
  padding: 4px;
  border-bottom: 1px solid #191919;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-0 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-0[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-0,
.emotion-0:hover,
.emotion-0:visited {
  background-color: #73b61c;
}

.emotion-0:hover {
  background-color: #96c955;
}

.emotion-0[aria-disabled=true] {
  background-color: #808080;
}

.emotion-1 {
  width: 8px;
}

.emotion-2 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-2:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-2[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-2,
.emotion-2:hover,
.emotion-2:visited {
  background-color: #808080;
}

.emotion-2:hover {
  background-color: #b3b3b3;
}

.emotion-2[aria-disabled=true] {
  background-color: #808080;
}

.emotion-4 {
  height: 4px;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-5 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: none;
  padding: 12px;
  border-top-left-radius: 2px;
  border-bottom-left-radius: 2px;
  color: #e0e0e0;
  background-color: #191919;
}

.emotion-5:focus {
  color: #191919;
  background-color: #ffffff;
}

.emotion-6 {
  width: 42px;
  border-top-right-radius: 2px;
  border-bottom-right-radius: 2px;
  color: #000000;
  background-color: #808080;
  margin: 0;
  padding: 0;
  border: 0;
  cursor: not-allowed;
}

<div
    className="emotion-8"
  >
    <div
      className="emotion-3"
    >
      <button
        className="emotion-0"
        onClick={[Function]}
        type="button"
      >
        + Add Metadata Filters
      </button>
      <div
        className="emotion-1"
      />
      <button
        className="emotion-2"
        onClick={[Function]}
        type="button"
      >
        Clear All Filters
      </button>
    </div>
    <div
      className="emotion-4"
    />
    <form
      action=""
      method="post"
      onSubmit={[Function]}
    >
      <div
        className="emotion-7"
      >
        <input
          className="emotion-5"
          onChange={[Function]}
          placeholder="Create text filter (search name or field value)"
          type="text"
          value=""
        />
        <button
          aria-disabled={true}
          aria-label="Search"
          className="emotion-6"
          onClick={[Function]}
          type="submit"
        >
          +
        </button>
      </div>
    </form>
  </div>,
  .emotion-8 {
  overflow: auto;
}

.emotion-7 {
  background-color: #252525;
  border-radius: 2px;
}

.emotion-3 {
  border-bottom: 1px solid #4a4a4a;
  padding-top: 12px;
  padding-bottom: 12px;
  padding-left: 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-3 h4 {
  font-weight: 400;
}

.emotion-1 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 0;
}

.emotion-1:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-1[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-0 {
  -webkit-transform: rotate(-180deg);
  -ms-transform: rotate(-180deg);
  transform: rotate(-180deg);
}

.emotion-0:hover {
  color: #ffffff;
}

.emotion-2 {
  font-size: 17px;
  line-height: 20px;
  padding-left: 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-6 {
  width: 100%;
  background-color: #191919;
}

.emotion-5 {
  padding: 16px;
  padding-left: 12px;
  padding-right: 12px;
}

.emotion-5 div {
  background-color: transparent;
  box-shadow: none;
}

.emotion-4 {
  margin: 0;
}

<div
    className="emotion-8"
  >
    <div
      className="emotion-7"
    >
      <div
        className="emotion-3"
      >
        <button
          aria-label="Collapse Section"
          className="emotion-1"
          onClick={[Function]}
          type="button"
        >
          <svg
            className="emotion-0"
            color="#808080"
            data-file-name="chevron.svg"
            width={20}
          />
        </button>
        <h4
          className="emotion-2"
        >
          clip.length
        </h4>
      </div>
      <div
        className="emotion-6"
      >
        <div
          className="emotion-5"
        >
          <ul
            className="emotion-4"
          >
            <li>
              count
              : 
              580
            </li>
            <li>
              min
              : 
              180
            </li>
            <li>
              max
              : 
              8525
            </li>
            <li>
              avg
              : 
              899.5689655172414
            </li>
            <li>
              sum
              : 
              521750
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>,
]
`;
